--- a/TODO
+++ b/TODO
@@ -1,139 +1,117 @@
-Apply collisions as well in the binary case of Simplify1.FindCompos.find_compos_gen
-(possibly by modifying function Simplify1.FindCompos.apply_eq_statements
-For counting of probabilities in FindCompos, for a collision
-M = M' where M characterizes b and M' is independent of b
-In case find_compos_bin, the fresh variables that I create should
-use as indices the list of indices of M'. However, that list of
-indices is not known at this point, so perhaps create a fresh replication
-index, use it for the indices of fresh variables for find_compos_bin,
-and replace later by the real list of indices when I have it?
-Or pass the indices of M' as argument? But for that, I need to know
-to indices introduced by is_indep. I can know them by calling is_indep
-before find_compos.
-However, when I evaluate find_compos for expressions M in 
-let x = M, I do not know which independent term will be compared with x.
-So in this case, I cannot have the indices.
-So it is probably better to create a fresh replication
-index, use it for the indices of fresh variables for find_compos_bin,
-and replace later by the real list of indices when I have it...
-   - create fresh repl index (size0), use it as index for variables in
-   find_compos_bin
-   - start from an empty probability state.
-   - get the probability state at the end of find_compos, and
-      return as status: the fresh repl index, that probability state,
-      in addition to the probability already returned.
-      The proba state consists of
-      * list of (b1,b2) corresponding to a proba
-      pcoll2rand b1.btype * indices at creation of b1 and b2 * (0.5 if b1 == b2)
-      * list of (t1,t2,side_cond,indices,probaf_mul_types) corresponding to a proba
-      probaf_mul_types * product of |indices|
+TO DO next
 
-      In the first list, the indices at creation should not contain the fresh
-      index created by find_compos. They are unaffected when we recreate
-      the probability for collision.
-      In the second list, we need to replace the fresh index in indices with
-      the indices of the term t_indep and update probaf_mul_types
-      with (dep_types, indep_types_opt) from is_indep:
-
-      prod (dep_types, full_type, indep_types_opt) (dep_types', full_type', indep_types_opt') =
-        if dep_types == [] then
-	   (dep_types', full_type', indep_types_opt')
-	else if dep_types' == [] then
-	   (dep_types, full_type, indep_types_opt)
-	else
-	   match indep_types_opt, indep_types_opt' with
-	   | None, _ | _, None ->
-	       (dep_types @ dep_types', full_type, None) (* full_type does not matter *)
-	   | Some indep_types, Some indep_types' ->
-	       (* prod dep_types * prod dep_types' <= full_type * full_type' / (prod indep_types * prod indep_types') *)
-	       if List.memq full_type indep_types' then
-	          (dep_types @ dep_types', full_type', Some (indep_types @ indep_types' \ full_type))
-	       else if List.memq full_type' indep_types then
-	          (dep_types @ dep_types', full_type, Some (indep_types @ indep_types' \ full_type'))
-	       else
-	          (dep_types @ dep_types', full_type, None) (* full_type does not matter *)
-
-      Use the following dependency analysis ([bdepinfo] is the argument given to [find_compos])
-      to call [apply_reds depth (dependency_anal bdepinfo) simp_facts t]
-
-let dependency_anal bdepinfo = 
-  let indep_test = Facts.default_indep_test bdepinfo in
-  let collision_test simp_facts t1 t2 = None in
-  (indep_test, collision_test)
-
-
-Specify hidden_key_collision_resistance,
+1) Specify hidden_key_collision_resistance,
 preimage_resistance, hidden_key_preimage_resistance,
 second_preimage_resistance, hidden_key_second_preimage_resistance
 see https://eprint.iacr.org/2004/035
 Specify IND$-CPA
-   
-Put the basic proba functions of polynom.ml in a separate module? (to
-avoid confusion between proba fcts and polynom fcts)
 
-The dependency information computed by DepAnal2 at the definition
-of a variable x and saying that a certain term M does not depend on a certain
-variable y could also be used when x[M1...Ml] is known to be defined
-(after substituting M1...Ml for the current replication indices in M and y).
+      - Be able to consider a call to the hash function as a call to
+      the hash oracle given to the adversary. That could be useful
+      when we do not really care about this call, e.g., when it is in
+      a session with a dishonest peer for which we do not prove
+      security. Hard with the current language. Perhaps with an oracle
+      call construct?
+      Problem: that would be as if we give the arguments of the oracle to
+      the adversary.
+      More generally, be able to consider several calls to a hash
+      oracle as a single case, like a call to a common subroutine,
+      when distinguishing the cases is useless.
 
-Complete the list of independent terms in dependency analyses using
-simp_facts: 
-* Add to the list of values known to be independent,
-values that are equal to values already known to be independent.
-(Equality comes from simp_facts)
-* If f(M1...Mn) is independent and f is [data], then M1,...,Mn are independent.
-* If M is independent and is of the form C[x1...xn] where C consists of applications
-of function symbols and x1...xn are variables (possibly with indices).
-Let y1...yn, z1...zn be fresh variables (without indices).
-Simplify the equality C[y1...yn] = C[z1...zn].
-If the obtained result is C'[y_{i1}...y_{in'}] = C'[z_{i1}...z_{in'}],
-then C'[x1...xn] is independent.
-   (See ~/repos/verified-noise/WG.25519.AB.dyn.replay_prot.failure
-   Solved another way for the Wireguard case study.)
+      A nice way to do that:
 
-Currently, when applying the INT-CTXT-corrupt property, CV
-considers that when the key is already corrupted, nothing
-can be inferred from the success of decryption. It would in fact
-be possible to strengthen a bit this property: when the arguments
-of decryption other than the key (i.e. ciphertext, as well as
-associated data and nonce if any) do not depend on the key,
-we could apply the INT-CTXT-corrupt property as if the key were
-not corrupted yet. Intuitively, independence shows that
-we can reorganize the code so that the decryption occurs
-before the corruption.
-(This remark comes from the proof of correctness in wireguard.)
-The same remark applies to other corruption cases.
+equiv(rom(hash))
+      foreach ih <= Nh do k <-R key;
+        (foreach i <= N do OH(x1: hashinput1) := return(hash(k, x1)) |
+         foreach i <= Ndont_care do OHdont_care(x1dont_care: hashinput1) := return(hash(k, x1dont_care)) |
+         foreach ieq <= Neq do Oeq(x1': hashinput1, r': hashoutput) := return(r' = hash(k, x1')) |
+         foreach icoll <= Ncoll do Ocoll(y1: hashinput1, z1: hashinput1) := 
+                 return(hash(k, y1) = hash(k, z1)))
+       <=(#Oeq * Pcoll1rand(hashoutput) + #Ocoll * Pcoll2rand(hashoutput))=> [manual]
+      foreach ih <= Nh do 
+        (foreach i <= N do OH(x1: hashinput1) := 
+	   find[unique] u <= N suchthat defined(x1[u], r[u]) && x1 = x1[u] then return(r[u])
+	   orfind u <= N suchthat defined(x1dont_care[u]) && x1 = x1dont_care[u] then return(hash_dont_care(k, x1)) else
+           r <-R hashoutput; return(r) |
+	 foreach i <= Ndont_care do OHdont_care(x1dont_care: hashinput1) :=
+	   find[unique] u <= N suchthat defined(x1[u], r[u]) && x1dont_care = x1[u] then return(r[u]) else
+	   return(hash_dont_care(k, x1dont_care)) |
+         foreach ieq <= Neq do Oeq(x1': hashinput1, r': hashoutput) := 
+           find[unique] u <= N suchthat defined(x1[u], r[u]) && x1' = x1[u] then return(r' = r[u])
+	   orfind u <= N suchthat defined(x1dont_care[u]) && x1 = x1dont_care[u] then return(r' = hash_dont_care(k, x1)) else
+	   return(false) |
+         foreach icoll <= Ncoll do Ocoll(y1: hashinput1, z1: hashinput1) := 
+                 return(y1 = z1)).
+      
+This version distinguishes between useful calls (OH, Oeq) and useless ones (OHdont_care).
+Only the useful calls are transformed.
 
-We could add a transformation that removes part of the code,
-by giving to the adversary all data that it needs in order
-to run that part of code by itself.
-It should adjust the probability computation by adding the runtime
-of the removed part to the runtime of the adversary.
-That allows to simplify the code.
-   
-0) Files that do not work
 
-- "Expanding and simplifying" is very slow in
-~/dev/projects/2014ANRAirbus/ICAO9880-May2017/computational/ATN_functions.cv
+Version 2:
 
-- Try to understand why CV explodes on 
-2013Airbus/computatinonal_revised/arinc823-secret-key.KEY_SECRECY.ORIGINAL.cv
-when I add the commented out code in check_distinct.ml,
-   to use elsefind facts.
+equiv(rom(hash))
+      foreach ih <= Nh do k <-R key;
+        (foreach i <= N do OH(x1: hashinput1) := return(hash(k, x1)) |
+         foreach i <= Ndont_care do OHdont_care(x1dont_care: hashinput1) := return(hash(k, x1dont_care)) |
+         foreach ieq <= Neq do Oeq(x1': hashinput1, r': hashoutput) := return(r' = hash(k, x1')) |
+         foreach icoll <= Ncoll do Ocoll(y1: hashinput1, z1: hashinput1) := 
+                 return(hash(k, y1) = hash(k, z1)))
+       <=(#Oeq * Pcoll1rand(hashoutput) + #Ocoll * Pcoll2rand(hashoutput))=> [manual]
+      foreach ih <= Nh do 
+        (foreach i <= N do OH(x1: hashinput1) := 
+	   find[unique] u <= N suchthat defined(x1[u], r[u]) && x1 = x1[u] then return(r[u])
+	   orfind u <= N suchthat defined(x1dont_care[u]) && x1 = x1dont_care[u] then return(event_abort collision) else
+           r <-R hashoutput; return(r) |
+	 foreach i <= Ndont_care do OHdont_care(x1dont_care: hashinput1) :=
+	   find[unique] u <= N suchthat defined(x1[u], r[u]) && x1dont_care = x1[u] then return(event_abort collision) else
+	   return(hash_dont_care(k, x1dont_care)) |
+         foreach ieq <= Neq do Oeq(x1': hashinput1, r': hashoutput) := 
+           find[unique] u <= N suchthat defined(x1[u], r[u]) && x1' = x1[u] then return(r' = r[u])
+	   orfind u <= N suchthat defined(x1dont_care[u]) && x1 = x1dont_care[u] then return(event_abort collision) else
+	   return(false) |
+         foreach icoll <= Ncoll do Ocoll(y1: hashinput1, z1: hashinput1) := 
+                 return(y1 = z1)).
+      
+This version executes event_abort collision in case of collision between a useful call (OH, Oeq) and a useless one (OHdont_care).
+I think it is better. Anyway, we will have to show the absence of such collisions. Using event_abort allows to remove
+immediately the code that happens after these collisions and thus simplifies the game considerably.
+Obviously, the user has to specify manually whether each call to hash is useful (OH, Oeq) or useless (OHdont_care),
+by specifying which oracle to use for each term.
 
-- examples/basic/needham-schroeder-skcorr.pcv
-  Example to improve in CV (show that A must have decrypted for B to
-  get his message)
-  That should allow to prove (inj-)event(fullB(A, k, x)) ==>
-  (inj-)event(fullA(B, k, x))
-  Similar remark for file examples/basic/needham-schroeder-sk.pcv and
-  query event(fullB(A, k, x)) ==> event(fullA(B, k, x))
+I could push this idea further by having several oracles that call H, called OH1,...,OHk.
+When an argument to OHi is equal to an argument of OHj for i<>j, event_abort collision.
+Otherwise, compare the argument of OHi with the previous arguments of OHi.
+That allows to show a posteriori that there no collisions between arguments
+of OHi and OHj for i<>j without experiencing a big blow-up.
+Perhaps sometimes one oracle can collide with all others (or with several others),
+e.g. the oracle of the adversary... How to adapt the equivalence to the various
+cases? Perhaps enough to allow:
+- the dont_care oracle
+- the oracle that collides with all
+- OHi not colliding with OHj for i<>j, let's say 1<=i,j<=10.
 
-- examples/basic/needham-schroeder-pkcorrKeyN{a,b}.pcv
-  CV does not manage due to ordering pb (or to key Na/Nb leaked too early?)
+The same idea applies to PRFs, PRP, SPRP
 
-   I am wondering if the changes to guess the tested session,
-   event adv loses, etc would allow CV to prove the two examples above.
+Distinguish ROM / ROM_large like I do for PRFs?
+
+2) allow "query equiv ..." to prove an equivalence
+   presented exactly as CryptoVerif accepts assumptions on
+   cryptographic primitives.
+   Warning: be careful with [computational] equivalences:
+   proving them requires triggering an "event bad" when the
+   result of the two sides differs, and showing that event bad has
+   a negligible probability of happening.
+   [unchanged] restrictions are shared between both sides.
+
+3) Allow entering assumptions as "equiv ..." without a replication
+   at the top of each side. In this case, add the replication automatically
+   by the following result:
+   P <=(p)=> Q  implies  !N P <=(N p{time + (N-1)max(t_P,t_Q)/time})=> !N Q
+   proved by a hybrid argument.
+   (Check that this result also applies to [computatiional] equivalences.)
+
+
+HIGH PRIORITY
    
 1) Incompatible front-end, second step
 
@@ -208,28 +186,12 @@ We could probably push this idea for noninterf x among S.
    occur in G1 and G2. However, I could reuse the same
    events several times.
       
-   Also allow "query equiv ..." to prove an equivalence
-   presented exactly as CryptoVerif accepts assumptions on
-   cryptographic primitives.
-   Warning: be careful with [computational] equivalences:
-   proving them requires triggering an "event bad" when the
-   result of the two sides differs, and showing that event bad has
-   a negligible probability of happening.
-   [unchanged] restrictions are shared between both sides.
-
-   Allow entering assumptions as "equiv ..." without a replication
-   at the top of each side. In this case, add the replication automatically
-   by the following result:
-   P <=(p)=> Q  implies  !N P <=(N p{time + (N-1)max(t_P,t_Q)/time})=> !N Q
-   proved by a hybrid argument.
-   (Check that this result also applies to [computatiional] equivalences.)
-
    Also query secret x [reachability] (the adversary cannot compute x).
 
 2) 
-PRF-ODH: I think the changes to guess the tested session,
-event adv loses, etc would help for working with PRF-ODH
-
+PRF-ODH: I think "success simplify" and "focus" 
+would help for working with PRF-ODH
+=> Benjamin Lipp will look at that
       
 4) Small details
    
@@ -317,7 +279,7 @@ in that session. Some difficulties:
    to reveal keys of other sessions to the adversary. If the key
    of the tested session is still secret, it proves independence.
 
-   1/ When I guess the tested session, replace:
+   When I guess the tested session, replace:
    ! i <= N Q with ! i <= N Qtest
    where Qtest is obtained by replacing the process P
    under the first input with if i = i_tested then P else P'.
@@ -338,6 +300,20 @@ in that session. Some difficulties:
 
    => Sometimes, I derive a contradiction but I need to leave some
    code. Would it be better to use AdvLoses instead of Yield?
+
+   I am wondering if the changes to guess the tested session,
+   event adv loses, etc would allow CV to prove the next two examples:
+   
+- examples/basic/needham-schroeder-skcorr.pcv
+  Example to improve in CV (show that A must have decrypted for B to
+  get his message)
+  That should allow to prove (inj-)event(fullB(A, k, x)) ==>
+  (inj-)event(fullA(B, k, x))
+  Similar remark for file examples/basic/needham-schroeder-sk.pcv and
+  query event(fullB(A, k, x)) ==> event(fullA(B, k, x))
+
+- examples/basic/needham-schroeder-pkcorrKeyN{a,b}.pcv
+  CV does not manage due to ordering pb (or to key Na/Nb leaked too early?)
 
 * It does not work automatically with the logs as they presented.
 Investigate in more details why (perhaps a bad orientation of
@@ -543,6 +519,30 @@ have the same continuation.
       - simplify (including depanal2) When simplify works on
         unexpanded games, I could use it as the pre-expansion
         simplification pass instead of using a specific transformation. 
+
+Regarding depanal2:
+
+The dependency information computed by DepAnal2 at the definition
+of a variable x and saying that a certain term M does not depend on a certain
+variable y could also be used when x[M1...Ml] is known to be defined
+(after substituting M1...Ml for the current replication indices in M and y).
+
+Complete the list of independent terms in dependency analyses using
+simp_facts: 
+* Add to the list of values known to be independent,
+values that are equal to values already known to be independent.
+(Equality comes from simp_facts)
+* If f(M1...Mn) is independent and f is [data], then M1,...,Mn are independent.
+* If M is independent and is of the form C[x1...xn] where C consists of applications
+of function symbols and x1...xn are variables (possibly with indices).
+Let y1...yn, z1...zn be fresh variables (without indices).
+Simplify the equality C[y1...yn] = C[z1...zn].
+If the obtained result is C'[y_{i1}...y_{in'}] = C'[z_{i1}...z_{in'}],
+then C'[x1...xn] is independent.
+   (See ~/repos/verified-noise/WG.25519.AB.dyn.replay_prot.failure
+   Solved another way for the Wireguard case study.)
+[That point may be hard and costly, I could also abandon that.]
+
       - insert_event [here, the difference is that we could insert the
         event in a term while currently we insert it only in a
         process]
@@ -557,7 +557,13 @@ have the same continuation.
 
       May work without change:
       - check_corresp
-         
+
+      One solution may be to allow the user to
+      insert event_abort terms after the crypto transformation but before
+      the expansion. => Anyway, I think that's a good thing to allow,
+      and it should be easy.
+      In this case, I could stop after having done insert_event
+      in the list above.
          
    - Have an indifferentiability toolbox:
       - Oracles with disjoint domains => independent oracles
@@ -573,98 +579,7 @@ have the same continuation.
       In particular, it solves the case of ROMs in sequence that was
       problematic for the previous idea.
 
-   - Be able to consider a call to the hash function as a call to
-      the hash oracle given to the adversary. That could be useful
-      when we do not really care about this call, e.g., when it is in
-      a session with a dishonest peer for which we do not prove
-      security. Hard with the current language. Perhaps with an oracle
-      call construct?
-      Problem: that would be as if we give the arguments of the oracle to
-      the adversary.
-      More generally, be able to consider several calls to a hash
-      oracle as a single case, like a call to a common subroutine,
-      when distinguishing the cases is useless.
 
-      A nice way to do that:
-
-equiv(rom(hash))
-      foreach ih <= Nh do k <-R key;
-        (foreach i <= N do OH(x1: hashinput1) := return(hash(k, x1)) |
-         foreach i <= Ndont_care do OHdont_care(x1dont_care: hashinput1) := return(hash(k, x1dont_care)) |
-         foreach ieq <= Neq do Oeq(x1': hashinput1, r': hashoutput) := return(r' = hash(k, x1')) |
-         foreach icoll <= Ncoll do Ocoll(y1: hashinput1, z1: hashinput1) := 
-                 return(hash(k, y1) = hash(k, z1)))
-       <=(#Oeq * Pcoll1rand(hashoutput) + #Ocoll * Pcoll2rand(hashoutput))=> [manual]
-      foreach ih <= Nh do 
-        (foreach i <= N do OH(x1: hashinput1) := 
-	   find[unique] u <= N suchthat defined(x1[u], r[u]) && x1 = x1[u] then return(r[u])
-	   orfind u <= N suchthat defined(x1dont_care[u]) && x1 = x1dont_care[u] then return(hash_dont_care(k, x1)) else
-           r <-R hashoutput; return(r) |
-	 foreach i <= Ndont_care do OHdont_care(x1dont_care: hashinput1) :=
-	   find[unique] u <= N suchthat defined(x1[u], r[u]) && x1dont_care = x1[u] then return(r[u]) else
-	   return(hash_dont_care(k, x1dont_care)) |
-         foreach ieq <= Neq do Oeq(x1': hashinput1, r': hashoutput) := 
-           find[unique] u <= N suchthat defined(x1[u], r[u]) && x1' = x1[u] then return(r' = r[u])
-	   orfind u <= N suchthat defined(x1dont_care[u]) && x1 = x1dont_care[u] then return(r' = hash_dont_care(k, x1)) else
-	   return(false) |
-         foreach icoll <= Ncoll do Ocoll(y1: hashinput1, z1: hashinput1) := 
-                 return(y1 = z1)).
-      
-This version distinguishes between useful calls (OH, Oeq) and useless ones (OHdont_care).
-Only the useful calls are transformed.
-
-
-Version 2:
-
-equiv(rom(hash))
-      foreach ih <= Nh do k <-R key;
-        (foreach i <= N do OH(x1: hashinput1) := return(hash(k, x1)) |
-         foreach i <= Ndont_care do OHdont_care(x1dont_care: hashinput1) := return(hash(k, x1dont_care)) |
-         foreach ieq <= Neq do Oeq(x1': hashinput1, r': hashoutput) := return(r' = hash(k, x1')) |
-         foreach icoll <= Ncoll do Ocoll(y1: hashinput1, z1: hashinput1) := 
-                 return(hash(k, y1) = hash(k, z1)))
-       <=(#Oeq * Pcoll1rand(hashoutput) + #Ocoll * Pcoll2rand(hashoutput))=> [manual]
-      foreach ih <= Nh do 
-        (foreach i <= N do OH(x1: hashinput1) := 
-	   find[unique] u <= N suchthat defined(x1[u], r[u]) && x1 = x1[u] then return(r[u])
-	   orfind u <= N suchthat defined(x1dont_care[u]) && x1 = x1dont_care[u] then return(event_abort collision) else
-           r <-R hashoutput; return(r) |
-	 foreach i <= Ndont_care do OHdont_care(x1dont_care: hashinput1) :=
-	   find[unique] u <= N suchthat defined(x1[u], r[u]) && x1dont_care = x1[u] then return(event_abort collision) else
-	   return(hash_dont_care(k, x1dont_care)) |
-         foreach ieq <= Neq do Oeq(x1': hashinput1, r': hashoutput) := 
-           find[unique] u <= N suchthat defined(x1[u], r[u]) && x1' = x1[u] then return(r' = r[u])
-	   orfind u <= N suchthat defined(x1dont_care[u]) && x1 = x1dont_care[u] then return(event_abort collision) else
-	   return(false) |
-         foreach icoll <= Ncoll do Ocoll(y1: hashinput1, z1: hashinput1) := 
-                 return(y1 = z1)).
-      
-This version executes event_abort collision in case of collision between a useful call (OH, Oeq) and a useless one (OHdont_care).
-I think it is better. Anyway, we will have to show the absence of such collisions. Using event_abort allows to remove
-immediately the code that happens after these collisions and thus simplifies the game considerably.
-Obviously, the user has to specify manually whether each call to hash is useful (OH, Oeq) or useless (OHdont_care),
-by specifying which oracle to use for each term.
-
-I could push this idea further by having several oracles that call H, called OH1,...,OHk.
-When an argument to OHi is equal to an argument of OHj for i<>j, event_abort collision.
-Otherwise, compare the argument of OHi with the previous arguments of OHi.
-That allows to show a posteriori that there no collisions between arguments
-of OHi and OHj for i<>j without experiencing a big blow-up.
-Perhaps sometimes one oracle can collide with all others (or with several others),
-e.g. the oracle of the adversary... How to adapt the equivalence to the various
-cases? Perhaps enough to allow:
-- the dont_care oracle
-- the oracle that collides with all
-- OHi not colliding with OHj for i<>j, let's say 1<=i,j<=10.
-
-The same idea applies to PRFs, PRP, SPRP
-
-Distinguish ROM / ROM_large like I do for PRFs?
-
-One solution (but painful in practice) may be to allow the user to
-insert event_abort terms after the crypto transformation but before
-the expansion. => Anyway, I think that's a good thing to allow,
-and it should be easy.
 
 9) Add more comments, e.g. in terms.mli
 
@@ -1035,6 +950,14 @@ to show that more calls are in fact calls to the same oracle.
 - new proof of EKE in oexamples/OEKE.ocv. In the probability, there is now a term
   (2 qH0 + 3 qH1) pCDH(...). Try to reduce it to (qH0 + qH1) pCDH(...)
 
+- "Expanding and simplifying" is very slow in
+~/dev/projects/2014ANRAirbus/ICAO9880-May2017/computational/ATN_functions.cv
+
+- Try to understand why CV explodes on 
+2013Airbus/computatinonal_revised/arinc823-secret-key.KEY_SECRECY.ORIGINAL.cv
+when I add the commented out code in check_distinct.ml,
+   to use elsefind facts.
+
 22) More generally, allow some reordering of instructions:
 - move "let"s up, when that reduces the number of occurrences of
   crypto primitives to compute. Risk: we may compute the expression
@@ -1057,7 +980,27 @@ expand "if x then m1 else m2" or to keep it as "test(x,m1,m2)",
 decide to merge or not each if/let/find when the branches execute
 the same code, ...
 
+23) We could add a transformation that removes part of the code,
+by giving to the adversary all data that it needs in order
+to run that part of code by itself.
+It should adjust the probability computation by adding the runtime
+of the removed part to the runtime of the adversary.
+That allows to simplify the code.
+   
 LOW PRIORITY:
+
+24) Currently, when applying the INT-CTXT-corrupt property, CV
+considers that when the key is already corrupted, nothing
+can be inferred from the success of decryption. It would in fact
+be possible to strengthen a bit this property: when the arguments
+of decryption other than the key (i.e. ciphertext, as well as
+associated data and nonce if any) do not depend on the key,
+we could apply the INT-CTXT-corrupt property as if the key were
+not corrupted yet. Intuitively, independence shows that
+we can reorganize the code so that the decryption occurs
+before the corruption.
+(This remark comes from the proof of correctness in wireguard.)
+The same remark applies to other corruption cases.
 
 25) For SPRP block ciphers, tell the system that collisions between
 random numbers used for generating random permutations are already 
@@ -1123,6 +1066,9 @@ rejects equivalences not supported by cryptotransf.ml)
 try to reduce the number of calls to build_def_process, by using
 a simpler function when we just need to know if a variable is
 defined by a restriction/let/... and similar usages.
+
+35) Put the basic proba functions of polynom.ml in a separate module? (to
+avoid confusion between proba fcts and polynom fcts)
 
 =========================================================================
 
@@ -4437,3 +4383,67 @@ in the whole game, this is taken care of in its status using
 ProbaIndepCollOfVar and in Transf_globaldepanal.compute_probas.
 - in DepAnal2, the variables are replaced with their value.
 FIXED 24/9/2019 For safety, merge collisions only when probabilities are equal
+
+Apply collisions as well in the binary case of Simplify1.FindCompos.find_compos_gen
+(possibly by modifying function Simplify1.FindCompos.apply_eq_statements
+For counting of probabilities in FindCompos, for a collision
+M = M' where M characterizes b and M' is independent of b
+In case find_compos_bin, the fresh variables that I create should
+use as indices the list of indices of M'. However, that list of
+indices is not known at this point, so perhaps create a fresh replication
+index, use it for the indices of fresh variables for find_compos_bin,
+and replace later by the real list of indices when I have it?
+Or pass the indices of M' as argument? But for that, I need to know
+to indices introduced by is_indep. I can know them by calling is_indep
+before find_compos.
+However, when I evaluate find_compos for expressions M in 
+let x = M, I do not know which independent term will be compared with x.
+So in this case, I cannot have the indices.
+So it is probably better to create a fresh replication
+index, use it for the indices of fresh variables for find_compos_bin,
+and replace later by the real list of indices when I have it...
+   - create fresh repl index (size0), use it as index for variables in
+   find_compos_bin
+   - start from an empty probability state.
+   - get the probability state at the end of find_compos, and
+      return as status: the fresh repl index, that probability state,
+      in addition to the probability already returned.
+      The proba state consists of
+      * list of (b1,b2) corresponding to a proba
+      pcoll2rand b1.btype * indices at creation of b1 and b2 * (0.5 if b1 == b2)
+      * list of (t1,t2,side_cond,indices,probaf_mul_types) corresponding to a proba
+      probaf_mul_types * product of |indices|
+
+      In the first list, the indices at creation should not contain the fresh
+      index created by find_compos. They are unaffected when we recreate
+      the probability for collision.
+      In the second list, we need to replace the fresh index in indices with
+      the indices of the term t_indep and update probaf_mul_types
+      with (dep_types, indep_types_opt) from is_indep:
+
+      prod (dep_types, full_type, indep_types_opt) (dep_types', full_type', indep_types_opt') =
+        if dep_types == [] then
+	   (dep_types', full_type', indep_types_opt')
+	else if dep_types' == [] then
+	   (dep_types, full_type, indep_types_opt)
+	else
+	   match indep_types_opt, indep_types_opt' with
+	   | None, _ | _, None ->
+	       (dep_types @ dep_types', full_type, None) (* full_type does not matter *)
+	   | Some indep_types, Some indep_types' ->
+	       (* prod dep_types * prod dep_types' <= full_type * full_type' / (prod indep_types * prod indep_types') *)
+	       if List.memq full_type indep_types' then
+	          (dep_types @ dep_types', full_type', Some (indep_types @ indep_types' \ full_type))
+	       else if List.memq full_type' indep_types then
+	          (dep_types @ dep_types', full_type, Some (indep_types @ indep_types' \ full_type'))
+	       else
+	          (dep_types @ dep_types', full_type, None) (* full_type does not matter *)
+
+      Use the following dependency analysis ([bdepinfo] is the argument given to [find_compos])
+      to call [apply_reds depth (dependency_anal bdepinfo) simp_facts t]
+
+let dependency_anal bdepinfo = 
+  let indep_test = Facts.default_indep_test bdepinfo in
+  let collision_test simp_facts t1 t2 = None in
+  (indep_test, collision_test)
+DONE 3/10/2019
