--- a/TODO
+++ b/TODO
@@ -194,7 +194,35 @@ would help for working with PRF-ODH
 => Benjamin Lipp will look at that
       
 4) Small details
-   
+
+- Infer (1)
+collision x <-R Z; y <-R Z; forall X: subG; 
+  return(exp_div_k(g_k,mult(x,y)) = X) <=(2*Pcoll1rand(Z))=> return(false) if X independent-of x || X independent-of y. 
+from (2)
+collision x <-R Z; forall y: Z, X: subG; 
+  return(exp_div_k(g_k,mult(x,y)) = X) <=(2*Pcoll1rand(Z))=> return(false) if y independent-of x && X independent-of x. 
+The idea would be to apply several times collisions to collect
+side conditions, and then try to reduce the term using all side conditions.
+E.g. x <-R Z; y <-R Z; 
+exp_div_k(g_k,mult(x[i],y[j])) = X
+becomes
+i = (index of x in X) && exp_div_k(g_k,mult(x[i],y[j])) = X
+by applying the collision (2) with x,y,X
+then
+i = (index of x in X) && j = (index of y in X) && exp_div_k(g_k,mult(x[i],y[j])) = X
+by applying the collision (2) with y,x,X for x,y,X.
+Then we must reduce the equality exp_div_k(g_k,mult(x[i],y[j])) = X
+knowing the values of i and j. Such a reduction may succeed
+while no reduction is possible if one knows only i or only j.
+
+However, if we add the probabilities of the collisions that we apply,
+we are going to obtain 4*Pcoll1rand(Z) instead of 2*Pcoll1rand(Z).
+Is (1) correct with 2*Pcoll1rand(Z)? Probably not!!!
+Revise other probabilities that follow a similar reasoning as well.
+
+- Links created by Facts.replace_term_repl_index are probably
+never removed. Is that a problem? Perhaps not.
+
 - Set future binders/true facts in terms in Terms.build_def_process
 
 - (OPTIONAL) In Terms.build_def_process, collect facts known to be true at the
