--- a/TODO
+++ b/TODO
@@ -911,6 +911,8 @@ of the type.
   * inputting the result of the function
 - receiving a variable function as argument is replaced
   with inputting nothing.
+The fact that this expansion works may be related to strong
+normalization of the simply types lambda calculus.
 
 Write
 "match M with 
