fixed missing recording of transfo in DepAnal2

--- a/TODO
+++ b/TODO
@@ -27,6 +27,8 @@ intermediate games)
 Use new_occ only in terms.move_occ; otherwise, use -1,
 and display [occ not set] if it is used.
 Track all remaining [occ not set] to avoid them.
+==> preserve occurrences in module DepAnal2, because they are
+then used in simplify.
 
 1) Specify hidden_key_collision_resistance,
 preimage_resistance, hidden_key_preimage_resistance,
