--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2131,9 +2131,26 @@ and the command \texttt{SArename} is executed for each of these variables in
 turn.
 
 \item \texttt{all\string_simplify}: perform several simplifications 
-on the game, as if \texttt{simplify}, \texttt{move all}
-if \texttt{autoMove = true}, and \texttt{remove\string_assign useless}
+on the game, as if 
+\begin{itemize}
+\item \texttt{simplify}, 
+\item \texttt{move all} if \texttt{autoMove = true}, 
+\item \texttt{remove\string_assign useless} if \texttt{autoRemoveAssignFindCond = false}, \\
+\texttt{remove\string_assign findcond} if \texttt{autoRemoveAssignFindCond = true},
+\item and \texttt{merge\string_branches} if \texttt{mergeBranches = true}
+\end{itemize}
 had been called.
+
+\item \texttt{expand}: expand \texttt{if}, \texttt{let}, \texttt{find},
+\texttt{event}, \texttt{event\_abort}, \texttt{new} terms into processes.
+That leads to distinguishing the branches until the end of the process,
+which may help the proof by distinguishing more cases, but
+may lead to very large games.
+This is also needed because some game transformations of CryptoVerif
+do not support non-expanded games.
+When \texttt{autoExpand = true} (the default), this expansion
+is performed automatically in case a game transformation results
+in a non-expanded game. 
 
 \item \texttt{crypto} \ldots: applies a cryptographic transformation
 that comes from a statement \texttt{equiv}. This command can
@@ -2232,14 +2249,19 @@ omitted as well. It is also possible to reorder or repeat the
 \end{itemize}
 
 
-\item $\texttt{insert\string_event }e\ occ$ replaces the subprocess at
+\item $\texttt{insert\string_event }e\ occ$ replaces the subprocess or term at
 program point $occ$ with the event $\texttt{event }e$. The games may
 be distinguished if and only if the event $e$ is executed, and CryptoVerif
 then tries to find a bound for the probability of executing that event.
 See above for how to specify the program point $occ$.
-The program point $occ$ must
-correspond to an output process (resp. oracle body in the oracles
-front-end).
+The program point $occ$ must correspond to an output process
+(resp. oracle body in the oracles front-end) or to a term not in a
+condition of {\tt find} nor in the channel of an input.
+
+When the setting {\tt autoExpand} is true and the occurrence $occ$
+corresponds to a term, the game is automatically expanded after
+inserting the event, so that after expansion the event occurs in a
+process, not in a term.
 
 \item $\texttt{insert}\ occ\ \texttt{"}ins\texttt{"}$ inserts instruction $ins$ at
 program point $occ$. The instruction $ins$ can be 
@@ -2304,9 +2326,10 @@ front-end).
   $occ$ with the term $term$. Obviously, CryptoVerif must be able to
   prove that these two terms are equal.
   These terms must not contain \texttt{if}, \texttt{let},
-  \texttt{find}, \texttt{new}.
+  \texttt{find}, \texttt{new}, \texttt{event}, \texttt{event\_abort}, \texttt{insert}, \texttt{get}.
 See above for how to specify the program point $occ$. 
-The program point $occ$ must correspond to a term.
+The program point $occ$ must correspond to a term not containing \texttt{if}, \texttt{let},
+  \texttt{find}, \texttt{new}, \texttt{event}, \texttt{event\_abort}, \texttt{insert}, \texttt{get}.
 
 \item \texttt{merge\_branches} merges the branches of {\tt if}, {\tt
     find}, and {\tt let} when they execute equivalent code. Such a
