--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2137,7 +2137,7 @@ on the game, as if
 \item \texttt{move all} if \texttt{autoMove = true}, 
 \item \texttt{remove\string_assign useless} if \texttt{autoRemoveAssignFindCond = false}, \\
 \texttt{remove\string_assign findcond} if \texttt{autoRemoveAssignFindCond = true},
-\item and \texttt{merge\string_branches} if \texttt{mergeBranches = true}
+\item and \texttt{merge\string_branches} if \texttt{autoMergeBranches = true}
 \end{itemize}
 had been called.
 
@@ -2313,7 +2313,7 @@ or {\tt let}, and can subsequently be transformed in different ways in
 each branch. 
 %
 It may be useful to disable the merging of branches in simplification
-by \texttt{set mergeBranches = false} when a case distinction is
+by \texttt{set autoMergeBranches = false} when a case distinction is
 inserted, so that the operation is not immediately undone at the next
 simplification.
 
